--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "@nuxtjs/i18n": "^9.3.1",
-    "@tailwindcss/vite": "^4.0.14",
     "nuxt": "^3.16.0",
     "prettier": "^3.5.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.0.14",
+    "tailwindcss": "^4.0.14"
   }
 }
